[package]
name = "eth_tx_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
bytes = "1.3.0"
clap = { version = "4.0.29", features = ["derive"] }
hex = "0.4.3"
regex = "1.7.0"
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
